# se-url-shortener-server

./: .env  Cargo.toml  README.md  config.toml
script/: build.sql  url_shorter.sql
src/: app.rs  app_type.rs  config.rs  error.rs  main.rs  murmur.rs  utils.rs
src/error/: method.rs  mod.rs
src/model/: conf.rs  mod.rs  req_res_struct.rs  state.rs
src/routers/: cors.rs  default.rs  jumper.rs  mod.rs  url_shorter.rs
