[package]
name = "se-url-shorter-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.7"
tokio = { version = "1.19.2", features = ["full"] }
log = "*"
serde = { version ="1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.2"
toml = "0.5.9"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "mysql" ] }
futures = "*"
axum-macros = "0.2.2"
lazy_static = "1.4.0"